Add async helper

--- a/tests/runner.html.tmpl
+++ b/tests/runner.html.tmpl
@@ -18,6 +18,7 @@
   <script src="../vendor/qunit/qunit/qunit.js"></script>
   <script src="../vendor/ember-qunit/dist/globals/main.js"></script>
   <script src="../tests/helpers/resolver.js"></script>
+  <script src="../tests/helpers/async.js"></script>
 
   <script src="../dist/<%=packageName%>.js"></script>
 
